// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBadge Option button should handle option change correctly 1`] = `
<div>
  <div
    class="SelectBadge"
  >
    <button
      aria-activedescendant=""
      aria-controls="downshift-:rc:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="priority button"
      aria-labelledby="downshift-:rc:-label"
      class="SelectBadge__priorityButton"
      id="downshift-:rc:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <test-file-stub
        classname="SelectBadge__icon SelectBadge__icon--mandatory"
        disabled="false"
        viewbox="0 0 24 24"
      />
    </button>
    <ul
      aria-labelledby="downshift-:rc:-label"
      class="List"
      id="downshift-:rc:-menu"
      role="listbox"
    />
    <button
      aria-activedescendant=""
      aria-controls="downshift-:rd:-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Option 1 option button"
      aria-labelledby="downshift-:rd:-label"
      class="SelectBadge__optionButton SelectBadge__optionButton--isSelected"
      id="downshift-:rd:-toggle-button"
      role="combobox"
      tabindex="0"
    >
      <span
        class="Text--size_small SelectBadge__valueText"
        title="Test Child"
      >
        Test Child
      </span>
      <span
        class="Text--size_small SelectBadge__optionText"
        title="Option 1"
      >
        Option 1
      </span>
    </button>
    <ul
      aria-labelledby="downshift-:rd:-label"
      class="List Dropdown__list"
      data-popper-escaped="true"
      data-popper-placement="bottom"
      data-popper-reference-hidden="true"
      id="downshift-:rd:-menu"
      role="listbox"
      style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 3px);"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item"
        id="downshift-:rd:-item-0"
        role="option"
      >
        <span
          class="Text--size_small"
        >
          Option 1
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item"
        id="downshift-:rd:-item-1"
        role="option"
      >
        <span
          class="Text--size_small"
        >
          Option 2
        </span>
      </li>
    </ul>
    <button
      aria-label="delete button"
      class="SelectBadge__deleteButton"
      type="button"
    >
      <test-file-stub
        style="width: 20px; height: 20px;"
        viewbox="0 0 24 24"
      />
    </button>
  </div>
</div>
`;

exports[`SelectBadge Priority button renders correctly with all props provided 1`] = `
<div>
  <div
    class="SelectBadge"
  >
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r0:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="priority button"
      aria-labelledby="downshift-:r0:-label"
      class="SelectBadge__priorityButton"
      id="downshift-:r0:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <test-file-stub
        classname="SelectBadge__icon SelectBadge__icon--mandatory"
        disabled="false"
        viewbox="0 0 24 24"
      />
    </button>
    <ul
      aria-labelledby="downshift-:r0:-label"
      class="List"
      id="downshift-:r0:-menu"
      role="listbox"
    />
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r1:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Option 1 option button"
      aria-labelledby="downshift-:r1:-label"
      class="SelectBadge__optionButton"
      id="downshift-:r1:-toggle-button"
      role="combobox"
      tabindex="0"
    >
      <span
        class="Text--size_small SelectBadge__valueText"
        title="Test Child"
      >
        Test Child
      </span>
      <span
        class="Text--size_small SelectBadge__optionText"
        title="Option 1"
      >
        Option 1
      </span>
    </button>
    <ul
      aria-labelledby="downshift-:r1:-label"
      class="List"
      id="downshift-:r1:-menu"
      role="listbox"
    />
    <button
      aria-label="delete button"
      class="SelectBadge__deleteButton"
      type="button"
    >
      <test-file-stub
        style="width: 20px; height: 20px;"
        viewbox="0 0 24 24"
      />
    </button>
  </div>
</div>
`;

exports[`SelectBadge Priority button should handle priority change correctly 1`] = `
<div>
  <div
    class="SelectBadge"
  >
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r5:-menu"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="priority button"
      aria-labelledby="downshift-:r5:-label"
      class="SelectBadge__priorityButton SelectBadge__priorityButton--isSelected"
      id="downshift-:r5:-toggle-button"
      role="combobox"
      tabindex="0"
      type="button"
    >
      <test-file-stub
        classname="SelectBadge__icon SelectBadge__icon--mandatory"
        disabled="false"
        viewbox="0 0 24 24"
      />
    </button>
    <ul
      aria-labelledby="downshift-:r5:-label"
      class="List Dropdown__list"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      id="downshift-:r5:-menu"
      role="listbox"
      style="position: absolute; left: 0px; top: 0px; width: 0px; transform: translate(0px, 3px);"
    >
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item"
        id="downshift-:r5:-item-0"
        role="option"
      >
        <test-file-stub
          classname="SelectBadge__icon SelectBadge__icon--mandatory"
          disabled="false"
          viewbox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Mandatory
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item"
        id="downshift-:r5:-item-1"
        role="option"
      >
        <test-file-stub
          classname="SelectBadge__icon SelectBadge__icon--important"
          disabled="false"
          viewbox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Important
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item"
        id="downshift-:r5:-item-2"
        role="option"
      >
        <test-file-stub
          classname="SelectBadge__icon SelectBadge__icon--optional"
          disabled="false"
          viewbox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Optional
        </span>
      </li>
      <li
        aria-disabled="false"
        aria-selected="false"
        class="ListItem ListItem--clickable List__item"
        id="downshift-:r5:-item-3"
        role="option"
      >
        <test-file-stub
          classname="SelectBadge__icon SelectBadge__icon--exclude"
          disabled="false"
          viewbox="0 0 24 24"
        />
        <span
          class="Text--size_small"
        >
          Exclude
        </span>
      </li>
    </ul>
    <button
      aria-activedescendant=""
      aria-controls="downshift-:r6:-menu"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Option 1 option button"
      aria-labelledby="downshift-:r6:-label"
      class="SelectBadge__optionButton"
      id="downshift-:r6:-toggle-button"
      role="combobox"
      tabindex="0"
    >
      <span
        class="Text--size_small SelectBadge__valueText"
        title="Test Child"
      >
        Test Child
      </span>
      <span
        class="Text--size_small SelectBadge__optionText"
        title="Option 1"
      >
        Option 1
      </span>
    </button>
    <ul
      aria-labelledby="downshift-:r6:-label"
      class="List"
      id="downshift-:r6:-menu"
      role="listbox"
    />
    <button
      aria-label="delete button"
      class="SelectBadge__deleteButton"
      type="button"
    >
      <test-file-stub
        style="width: 20px; height: 20px;"
        viewbox="0 0 24 24"
      />
    </button>
  </div>
</div>
`;
